objects/FSLABB_GanttColorMapping__mdt.object
<CustomObject>
    <description>created for FSL Implementation: User Story 3056. 
Mapping for coloring of Service Appointment bars on Gantt-Chart of Dispatcher&apos;s console, with WO Service Categories</description>
    <fields>
        <fullName>FSLABB_ColorHexCode__c</fullName>
        <label>ColorHexCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_ServiceCategory__c</fullName>
        <label>Service Category</label>
        <picklist>
            <picklistValues>
                <fullName>S01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S65</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_ServiceSubCategory__c</fullName>
        <label>Service Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>S00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S48</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gantt-Color mapping</label>
    <listViews>
        <fullName>FSLABB_GanttColorMapping</fullName>
        <columns>MasterLabel</columns>
        <columns>FSLABB_ServiceCategory__c</columns>
        <columns>FSLABB_ServiceSubCategory__c</columns>
        <columns>FSLABB_ColorHexCode__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>Gantt-Color Mapping</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Gantt-Color mappings</pluralLabel>
</CustomObject>